# MagicSquare_01

./: .coverage  .cursorrules  README.md  pyproject.toml
Prompting/: 01.problem-definition-report-prompt.md  02.layer-design-contracts-tdd-report-prompt.md  03.cursorrules-configuration-report-prompt.md  04.user-journey-levels-1-5-report-prompt.md  05.making-pdr-report-prompt.md  06.readme-and-onboarding-bootstrap-report-prompt.md  07.manual-test-cases-tc-ms-en-prompt.md  08.dual-track-red-test-skeletons-report-prompt.md
Report/: 01.problem-definition-report.md  02.layer-design-contracts-tdd-report.md  03.cursorrules-configuration-report.md  04.user-journey-levels-1-5-report.md  05.making-pdr-report.md  06.readme-and-onboarding-bootstrap-report.md  07.manual-test-cases-tc-ms-en-report.md  08.dual-track-red-test-skeletons-report.md  09.dual-track-first-green-magicsquare-package-report.md  10.test-coverage-html-report.md  11.refactoring-plan-and-smell-analysis-report.md
docs/: MagicSquare-4x4-Completion-System-Report.md  PDR.md  test-cases-TC-MS-english.md
magicsquare/: __init__.py  __main__.py  boundary.py  constants.py  domain.py
magicsquare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
magicsquare/gui/: __init__.py  __main__.py  main.py  window.py
test-skeletons/junit5-tc-ms/: pom.xml
test-skeletons/junit5-tc-ms/src/test/java/com/magicsquare/red/: LogicRedDomainTest.java  UiRedBoundaryTest.java
tests/logic_red/: test_logic_red_domain.py
tests/ui_red/: test_ui_red_boundary.py
