[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["magicsquare*"]

[project]
name = "magicsquare"
version = "0.1.0"
description = "4×4 magic square completion — ECB layout, contract-first TDD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
gui = [
  "PyQt6>=6.5.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
]

[project.scripts]
magicsquare-gui = "magicsquare.gui.main:run_app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.coverage.run]
source = ["magicsquare"]
branch = true
omit = ["tests/*"]
